--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a11y-checker",
+  "name": "@jemsco/a11y-checker",
   "version": "1.0.1",
   "description": "check html for accessibility issues",
   "main": "dist/index.js",
